# fastfusion_ros

./: .gitignore  CMakeLists.txt
fastfusion_node/: CMakeLists.txt
fastfusion_node/cfg/: camchain_tum2.yaml  params.yaml  params_tum.yaml  rviz.rviz
fastfusion_node/include/fastfusion_node/: fastfusion_node.hpp  online_fusion_ros.hpp  pangolin_viewer.h
fastfusion_node/launch/: fastfusion_node_tum.launch
fastfusion_node/launch/include/: rgbd_to_pcl_tum.launch
fastfusion_node/src/: fastfusion_node.cpp  main_fastfusion_node.cpp  online_fusion_ros.cpp  pangolin_test.cpp  pangolin_viewer.cpp
fusion/: CMakeLists.txt
fusion/include/fusion/: geometryfusion_mipmap_cpu.hpp
fusion/src/: geometryfusion_mipmap_cpu.cpp
scripts/: add_pointclouds_to_bagfile.py  check_pointcloud_bag.py  link_camera_world_tf.py  remove_leading_slashes.py
